--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{AWS_SECRET_ACCESS_KEY}}
-          aws-region: us-west-2
+          aws-region: us-east-1
 
       # - name: Set up Node.js
       #   uses: actions/setup-node@v3
