Fix deployment workflow and update AWS theming

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,4 +21,20 @@ jobs:
           aws-region: us-east-1
 
       - name: Deploy Static Site to S3 Bucket
-        run: aws s3 sync . s3://awswithdevcom.pokhrelankit.com.np --delete
+        run: |
+          # Sync only the necessary web files
+          aws s3 sync . s3://awswithdevcom.pokhrelankit.com.np \
+            --delete \
+            --exclude ".git/*" \
+            --exclude ".github/*" \
+            --exclude "readme.md" \
+            --exclude ".gitignore"
+          
+          # Set proper content types for better loading
+          aws s3 cp s3://awswithdevcom.pokhrelankit.com.np/style/style.css s3://awswithdevcom.pokhrelankit.com.np/style/style.css \
+            --content-type "text/css" \
+            --metadata-directive REPLACE
+          
+          aws s3 cp s3://awswithdevcom.pokhrelankit.com.np/js/index.js s3://awswithdevcom.pokhrelankit.com.np/js/index.js \
+            --content-type "application/javascript" \
+            --metadata-directive REPLACE
